--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,9 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "knex": "^3.1.0",
     "node-fetch": "^3.3.2",
-    "sqlite": "^5.1.1",
+    "pg": "^8.17.2",
     "sqlite3": "^5.1.6"
   }
 }
