--- a/package.json
+++ b/package.json
@@ -1,10 +1,21 @@
 {
+  "name": "mockserver-root",
+  "version": "1.0.0",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
-    "postinstall": "npm install --prefix backend && npm install --prefix frontend",
-    "build": "npm run build --prefix frontend",
-    "start": "npm start --prefix backend"
+    "build": "npm install --prefix frontend && npm run build --prefix frontend",
+    "start": "node backend/index.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "knex": "^3.1.0",
+    "node-fetch": "^3.3.2",
+    "pg": "^8.17.2",
+    "sqlite3": "^5.1.7",
     "react-router-dom": "^7.11.0"
   }
 }
